syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.tools.checkfunds";
option java_outer_classname = "FundCheckerService";
option objc_class_prefix = "FCS";

service FundCheckerService {
    rpc CheckFunds (DailyFundsQuery) returns () {
    }
    rpc GetFundsPrice (FundCodes) returns (FundInfos) {
    }
    rpc getGrowthRateOfMonetaryFundsList (MonetaryFundsQueryItem) returns (GrowthRateOfMonetaryFundCollection) {
    }
}

message DailyFundsQuery {
    repeated string codes = 1;
    string nav_latest_date_start = 2;
    string nav_latest_date_end = 3;
    int32 check_table_idx = 4;
}

